# io.microdog

./: CMakeLists.txt  README.md
api/: CMakeLists.txt  gsmh.c  gsmh.h
common/: aes.c  aes.h  ini.c  ini.h  md5.c  memutils.c  memutils.h  utils.c  utils.h
emulator/: CMakeLists.txt  emulator_config.c  emulator_config.h  emulator_linux.c  io.microdog.ini.example  server_emulator.c  server_emulator.h
legacy_microdoge/: README.md  getid.py  testvectorrip.py  vecdump.py
legacy_microdoge/3.4/: Makefile  ahntant.py  errcode-eng.txt  gsmh.h  gsmh2.h  makedog.c  makedoge.py  md34_udp_emu.py  mhzro.idb  microdog.py  usbdog.c  usbdog.idb  usbdog_kmod.c  vid_serial_extractor.py
legacy_microdoge/4.0/: emu.py  getdatapool.py  gsmh.h  usbdaemon_legit
protocol/: protocol.c  protocol.h
